k8s/overlays/staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
  - host: website-pprd.medialab.sciences-po.fr
    http:
      paths:
        - path: /
          backend:
            serviceName: web
            servicePort: 7000
